# fireplace

./: .gitignore  CMakeLists.txt  README.md
bootchain/G986B/: bootrom-fuses.hex  crecker.efuse  otp-fuses.txt
emulator/core/: CMakeLists.txt  emulator.c  main.c
emulator/soc/: CMakeLists.txt  memmap.c  soc.c
emulator/soc/apm/: apm.c
emulator/soc/bl1/: bl1.c
emulator/soc/bl2/: bl2.c
emulator/soc/bootchain/: bootchain.c  bootchain_internal.h  cpu.c  cpu_internal.h  cpu_lse.c  cpu_mmu.c  cpu_runtime.c  cpu_system.c  crypto.c  hooks.c  images.c
emulator/soc/bootrom/: auth.c  bootrom.c  bootrom_internal.h  fuses.c  services.c
emulator/soc/cmu/: cmu.c
emulator/soc/dmc/: dmc.c
emulator/soc/el3_mon/: context.c  el3_mon.c  el3_mon_internal.h  invalid_memory.c  ldfw_mmu.c  ldfw_service.c  lk_handoff.c  returns.c  route_lk.c  route_runtime.c  route_secure.c  secure_hooks.c  secure_mmu.c  secure_shadow.c  worlds.c
emulator/soc/epbl/: epbl.c
emulator/soc/fb/: fb.c
emulator/soc/gpio/: gpio_alive.c
emulator/soc/lk/: lk.c  lk_boot.c  lk_debug.c  lk_debug.h  lk_devices.c  lk_devices.h  lk_devices_internal.h  lk_display.c  lk_i2c.c  lk_internal.h  lk_patches.c
emulator/soc/mct/: mct.c
emulator/soc/otp/: otp.c
emulator/soc/speedy/: speedy.c
emulator/soc/sss/: sss.c  sss_cipher.c  sss_hash.c  sss_internal.h  sss_key.c  sss_math.c
emulator/soc/uart/: uart.c
emulator/soc/ufs/: ufs.c  ufs_descriptors.c  ufs_endian.c  ufs_internal.h  ufs_prdt.c  ufs_query.c  ufs_rpmb.c  ufs_scsi.c  ufs_storage.c  ufs_transfer.c
emulator/soc/usb/: usb.c
gui/: gui_core.c
include/fireplace/core/: core.h  emulator.h
include/fireplace/gui/: gui.h
include/fireplace/soc/: peripherals.h  soc.h
include/fireplace/soc/apm/: apm.h
include/fireplace/soc/bootchain/: bootchain.h
include/fireplace/soc/cmu/: cmu.h
include/fireplace/soc/dmc/: dmc.h
include/fireplace/soc/fb/: fb.h
include/fireplace/soc/mct/: mct.h
include/fireplace/soc/otp/: otp.h
include/fireplace/soc/sss/: sss.h
include/fireplace/soc/uart/: uart.h
include/fireplace/soc/ufs/: ufs.h
